fixed spacing at top of pages

--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -9,7 +9,7 @@
 .aboutContent {
     width: 100vw;
     min-height: 80vh;
-    margin: 25px auto 55px auto;
+    margin: 85px auto 55px auto;
 }
 
 .aboutPic {
