--- a/src/pages/education/Education.css
+++ b/src/pages/education/Education.css
@@ -5,7 +5,7 @@
 .educationContent {
     width: 100vw;
     min-height: 80vh;
-    margin: 25px auto 55px auto;
+    margin: 85px auto 55px auto;
 }
 
 .school {
