--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -5,7 +5,7 @@
 .homeContent {
     width: 100vw;
     min-height: 80vh;
-    margin: 50px auto 55px auto;
+    margin: 110px auto 55px auto;
 }
 
 .homeLead {
