--- a/src/pages/projects/Projects.css
+++ b/src/pages/projects/Projects.css
@@ -1,5 +1,5 @@
 .projectContent {
     width: 100vw;
     min-height: 80vh;
-    margin: 25px auto 55px auto;
+    margin: 85px auto 55px auto;
 }
