--- a/src/pages/resume/Resume.css
+++ b/src/pages/resume/Resume.css
@@ -10,7 +10,7 @@
 .resumeContent {
     width: 100vw;
     min-height: 80vh;
-    margin: 25px auto 55px auto;
+    margin: 85px auto 55px auto;
 }
 
 .resumePic {
